test: expand coverage for core controllers and beans
Agent-Logs-Url: https://github.com/psi-probe/psi-probe/sessions/a9db73f5-05bf-4531-9583-cad51d1f00a7

Co-authored-by: hazendaz <975267+hazendaz@users.noreply.github.com>